plugins {
    id 'war'
    id 'maven'
    id 'maven-publish'
    id 'com.jfrog.bintray' version '1.8.4'
    id 'checkstyle'
}

repositories {
    mavenLocal()
    mavenCentral()
}

apply from: 'opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

war {
    from(System.getenv('RPS') + '/resources/') {
        include 'swagger-ui/'
    }
}

copy {
    from (System.getenv('A') + '/etc/') {
        include 'RsaSignaturePub.key'
    }
    into 'src/main/resources'
}

dependencies {
    providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'
    
    compile 'org.opencadc:cadc-util:[1.7.3,2.0)'
    compile 'org.opencadc:cadc-log:[1.1.5,)'
    compile 'org.opencadc:cadc-rest:[1.3.9,)'
    compile 'org.opencadc:cadc-uws-server:[1.1.3,)'
    compile 'org.opencadc:cadc-access-control:[1.1.23,)'
    compile 'org.opencadc:cadc-access-control-identity:[1.1.0,)'
    compile 'org.opencadc:cadc-vosi:[1.4.3,)'
    compile 'org.opencadc:cadc-cdp:[1.2,)'
    compile 'com.google.code.gson:gson:2.8.6'
    runtime 'org.opencadc:cadc-registry:[1.3.5,)'
    
    testCompile 'junit:junit:[4.0,)'
}
